Add feature specification and implementation tasks for Copilot Instructions Setup MCP Server
- Created feature specification document outlining the core functionality, user stories, acceptance criteria, and requirements for the Copilot Instructions Setup MCP Server.
- Developed a comprehensive task list organized by user story, detailing implementation phases, dependencies, and execution order for the project.
- Established foundational infrastructure and core services required for technology detection, baseline instruction retrieval, and company guideline integration.

--- a/SampleMcpServer/appsettings.json
+++ b/SampleMcpServer/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GitHub": {
+    "Repository": "github/awesome-copilot",
+    "InstructionsPath": "instructions",
+    "CacheDurationHours": 24,
+    "UserAgent": "SampleMcpServer/1.0"
+  },
+  "Cache": {
+    "AwesomeCopilotTtlHours": 24,
+    "EnablePersistence": false
+  }
 }
